添加网站图标favicon

--- a/templates/base.html
+++ b/templates/base.html
@@ -10,6 +10,9 @@
 
     <meta name="keywords" content="道德经,老子,道家经典,多版本对照,王弼注,河上公注,王夫之,憨山德清,帛书本,郭店楚简,英文译本,在线阅读">
 
+    <!-- 网站图标 -->
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>☯</text></svg>">
+
     <!-- 以下两行利于微信、QQ、微博分享时显示漂亮卡片 -->
     <meta property="og:title" content="道德经多版本对照阅读平台">
     <meta property="og:description" content="王弼、河上公、王夫之、帛书、英文多版本并列，疑难字注音，暗黑模式，支持手机阅读。">
