使用本地音频文件，修复背景音乐播放

--- a/templates/base.html
+++ b/templates/base.html
@@ -146,9 +146,8 @@
     </div>
 
     <!-- 背景音乐 -->
-    <audio id="bgMusic" loop preload="none" crossorigin="anonymous">
-        <source src="https://cdn.pixabay.com/audio/2022/10/25/audio_4f60002816.mp3" type="audio/mpeg">
-        <source src="https://upload.wikimedia.org/wikipedia/commons/e/eb/Guqin_-_Yangguan_San_Die_%28Three_Refrains_on_the_Yang_Pass_Theme%29.ogg" type="audio/ogg">
+    <audio id="bgMusic" loop preload="auto">
+        <source src="{{ url_for('static', filename='audio/gaoshanliushui.mp3') }}" type="audio/mpeg">
     </audio>
 
     <!-- 音乐音量控制面板 -->
